# compound-error

./: Cargo.toml  README.md
examples/: basic.rs  transparent.rs
src/: lib.rs  util.rs
